Some Front-end work for login and work page

--- a/code/js/front-end/src/app/work/work.component.html
+++ b/code/js/front-end/src/app/work/work.component.html
@@ -1,2 +1,13 @@
-<h3>Work Center</h3>
-<p>work works!</p>
+<!-- app.component.html or any other component's HTML file -->
+
+<app-topbar></app-topbar>
+<div class="content">
+  <div class="sidebar">
+    <app-sidebar></app-sidebar>
+  </div>
+  <div class="main-content">
+    <h2>Content Area</h2>
+    <p>This is the content area. You can add your content here.</p>
+  </div>
+</div>
+
