--- a/code/js/front-end/src/app/topbar/topbar.component.css
+++ b/code/js/front-end/src/app/topbar/topbar.component.css
@@ -4,6 +4,7 @@
   background-color: #333;
   color: #f2f2f2;
   padding: 10px; /* Adjust padding if needed */
+  margin-bottom: 200px;
   width: 100%;
   box-sizing: border-box;
   display: flex;
