--- a/code/js/front-end/src/app/work/work.component.css
+++ b/code/js/front-end/src/app/work/work.component.css
@@ -1,18 +1,41 @@
-/* sidebar.component.css */
 
-.sidebar {
-  background-color: #333;
-  color: #f2f2f2;
-  width: 190px; /* Set the width of the sidebar */
-  box-sizing: border-box;
-  padding: 50px; /* Adjust padding as needed */
+.results {
+  display: grid;
+  column-gap: 14px;
+  row-gap: 14px;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
+  margin-top: 50px;
+  justify-content: space-around;
 }
 
-.content {
-  display: flex;
+input[type="text"] {
+  border: solid 1px #000000;
+  padding: 10px;
+  border-radius: 8px;
+  margin-right: 4px;
+  display: inline-block;
+  width: 30%;
 }
 
-.main-content {
-  flex: 1;
-  padding: 50px; /* Adjust padding as needed */
+button {
+  padding: 10px;
+  border: solid 1px #020241;
+  background: #0326da;
+  color: white;
+  border-radius: 8px;
+}
+
+@media (min-width: 500px) and (max-width: 768px) {
+  .results {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  input[type="text"] {
+    width: 70%;
+  }
+}
+
+@media (max-width: 499px) {
+  .results {
+    grid-template-columns: 1fr;
+  }
 }
