--- a/code/js/front-end/src/app/work/work.component.html
+++ b/code/js/front-end/src/app/work/work.component.html
@@ -1,5 +1,5 @@
 <!-- app.component.html or any other component's HTML file -->
-
+<!--
 <app-topbar></app-topbar>
 <div class="content">
   <div class="sidebar">
@@ -10,4 +10,18 @@
     <p>This is the content area. You can add your content here.</p>
   </div>
 </div>
-
+-->
+<body>
+  <section>
+    <form>
+      <input type="text" placeholder="Filter by city" #filter>
+      <button class="primary" type="button" (click)="filterResults(filter.value)">Search</button>
+    </form>
+  </section>
+  <section class="results">
+    <app-work-listings
+      *ngFor="let workListing of filteredWorkList"
+      [workListing]="workListing">
+    </app-work-listings>
+  </section>
+</body>
