--- a/code/js/front-end/src/app/work-listings/work-listings.component.css
+++ b/code/js/front-end/src/app/work-listings/work-listings.component.css
@@ -2,22 +2,26 @@
   background: #9b76ec;
   border-radius: 30px;
   padding-bottom: 30px;
+  text-align: center;
 }
 .listing-heading {
   color: #1b0431;
   padding: 10px 20px 0 20px;
 }
-.listing-photo {
-  height: 250px;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 30px 30px 0 0;
+.listing-description {
+}
+.listing-state {
+}
+.listing-type {
 }
 .listing-location {
-  padding: 10px 20px 20px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.listing-location::before {
-  content: url("/assets/location-pin.svg") / "";
+.location-pin {
+  margin-right: 10px;
+  text-align: center;
 }
 
 section.listing a {
