--- a/code/js/front-end/src/app/work-listings/work-listings.component.html
+++ b/code/js/front-end/src/app/work-listings/work-listings.component.html
@@ -1,7 +1,14 @@
-
 <section class="listing">
-  <img class="listing-photo" [src]="workListing.photo" alt="Exterior photo of {{workListing.name}}">
   <h2 class="listing-heading">{{ workListing.name }}</h2>
-  <p class="listing-location">{{ workListing.city}}, {{workListing.state }}</p>
+  <p class="listing-type">Tipo: {{ workListing.type }}</p>
+  <p class="listing-state">Estado: {{ workListing.state }}</p>
+  <p class="listing-description">{{ workListing.description }}</p>
+  <section class="listing-location">
+    <img class="location-pin" src="/assets/location-pin.svg" alt="logo" aria-hidden="true">
+    <p>{{ workListing.address.location.district }}, {{ workListing.address.location.county }}
+      , {{ workListing.address.location.parish }}<br>{{ workListing.address.street }}
+      , {{ workListing.address.postalCode }}
+    </p>
+  </section>
   <a [routerLink]="['/work-details', workListing.id]">Learn More</a>
 </section>
