--- a/code/js/front-end/src/app/work/work.component.html
+++ b/code/js/front-end/src/app/work/work.component.html
@@ -14,7 +14,7 @@
 <body>
   <section>
     <form>
-      <input type="text" placeholder="Filter by city" #filter>
+      <input type="text" placeholder="Search by name" #filter>
       <button class="primary" type="button" (click)="filterResults(filter.value)">Search</button>
     </form>
   </section>
