--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -4,7 +4,7 @@
       <mat-icon>menu</mat-icon>
     </button>
     <a [routerLink]="['/work']">
-      <img src="./assets/logo-updated.png" alt="Site Diary" class="top-bar-image" >
+      <img src="../assets/logo.png" alt="Site Diary" class="top-bar-image" >
       <span class="logo-description">Site Diary</span>
     </a>
   </mat-toolbar>
