--- a/code/js/front-end/src/app/sign-up/sign-up.component.html
+++ b/code/js/front-end/src/app/sign-up/sign-up.component.html
@@ -1,44 +1,98 @@
-<form (ngSubmit)="signUp()">
-  <div class="input">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" [(ngModel)]="email" required>
+<body>
+<div class="container">
+  <div class="left">
+    <img src="assets/logo.png" alt="" class="logo">
+    <h1 class="title">Site Diary</h1>
   </div>
-  <div class="input">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" [(ngModel)]="username" required>
-  </div>
-  <div class="input">
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" [(ngModel)]="password" required>
-  </div>
-  <div class="input">
-    <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" name="firstName" [(ngModel)]="firstName" required>
-  </div>
-  <div class="input">
-    <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" name="lastName" [(ngModel)]="lastName" required>
-  </div>
-  <div class="input">
-    <label for="nif">NIF:</label>
-    <input type="text" id="nif" name="nif" [(ngModel)]="nif" required>
-  </div>
-  <div class="input">
-    <label for="phone">Phone:</label>
-    <input type="text" id="phone" name="phone" [(ngModel)]="phone">
-  </div>
-  <div class="input">
-    <label for="parish">Parish:</label>
-    <input type="text" id="parish" name="parish" [(ngModel)]="parish" required>
-  </div>
-  <div class="input">
-    <label for="county">County:</label>
-    <input type="text" id="county" name="county" [(ngModel)]="county" required>
-  </div>
-  <div class="input">
-    <label for="role">Role:</label>
-    <input type="checkbox" id="role" name="role" [(ngModel)]="isChecked" (change)="changeRole()">
-  </div>
+  <div class="right">
+    <h1 class="page-title">Sign Up</h1>
+    <form (ngSubmit)="signUp()">
 
-  <button class="button" type="submit">Sign Up</button>
-</form>
+      <div class="input">
+        <div>
+          <label for="email">Email</label>
+        </div>
+        <div>
+          <input type="email" id="email" name="email" [(ngModel)]="email" required>
+        </div>
+      </div>
+      <div class="input">
+        <div>
+          <label for="username">Username</label>
+        </div>
+        <div>
+          <input type="text" id="username" name="username" [(ngModel)]="username" required>
+        </div>
+      </div>
+      <div class="input">
+        <div>
+          <label for="password">Password</label>
+        </div>
+        <div>
+          <input type="password" id="password" name="password" [(ngModel)]="password" required>
+        </div>
+      </div>
+      <div class="input">
+        <div>
+          <label for="firstName">First Name</label>
+        </div>
+        <div>
+          <input type="text" id="firstName" name="firstName" [(ngModel)]="firstName" required>
+        </div>
+      </div>
+      <div class="input">
+        <div>
+          <label for="lastName">Last Name</label>
+        </div>
+        <div>
+          <input type="text" id="lastName" name="lastName" [(ngModel)]="lastName" required>
+        </div>
+      </div>
+      <div class="input">
+        <div>
+          <label for="nif">NIF</label>
+        </div>
+        <div>
+          <input type="text" id="nif" name="nif" [(ngModel)]="nif" required>
+        </div>
+      </div>
+      <div class="input">
+        <div>
+          <label for="phone">Phone</label>
+        </div>
+        <div>
+          <input type="text" id="phone" name="phone" [(ngModel)]="phone">
+        </div>
+      </div>
+      <div class="input">
+        <div>
+          <label for="parish">Parish</label>
+        </div>
+        <div>
+          <input type="text" id="parish" name="parish" [(ngModel)]="parish" required>
+        </div>
+      </div>
+      <div class="input">
+        <div>
+          <label for="county">County</label>
+        </div>
+        <div>
+          <input type="text" id="county" name="county" [(ngModel)]="county" required>
+        </div>
+      </div>
+      <div class="input">
+        <div>
+          <label for="role">Câmara Municipal </label>
+          <input type="checkbox" id="role" name="role" [(ngModel)]="isChecked" (change)="changeRole()">
+        </div>
+      </div>
+      <div >
+        <button mat-stroked-button class="button" type="submit">Sign Up</button>
+      </div>
+    </form>
+    <div>
+      <p class="text">Already have an account? <a [routerLink]="'/login'">Login here.</a></p>
+    </div>
+  </div>
+</div>
+</body>
