Tab-Bar Reacting properly, some bugfixes and member page first draft done

--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -15,7 +15,7 @@
   </mat-toolbar>
   <section class="container">
     <mat-drawer-container class="full-height" hasBackdrop="false">
-      <mat-drawer #drawer class="side-bar" mode="push">
+      <mat-drawer #drawer class="side-bar" mode="side">
         <button
           class="side-option-button"
           routerLinkActive="side-option-active"
