Create Work Page Started

--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -19,17 +19,12 @@
         <button
           class="side-option-button"
           routerLinkActive="side-option-active"
-          routerLink="login">Login
-        </button>
-        <button
-          class="side-option-button"
-          routerLinkActive="side-option-active"
           routerLink="work">Works
         </button>
         <button
           class="side-option-button"
           routerLinkActive="side-option-active"
-          routerLink="signup">Sign Up
+          routerLink="create-work">Create Work
         </button>
       </mat-drawer>
       <mat-drawer #drawerProfile class="profile-drawer" mode="over" position="end">
