--- a/code/js/front-end/src/app/sign-up/sign-up.component.css
+++ b/code/js/front-end/src/app/sign-up/sign-up.component.css
@@ -32,8 +32,13 @@ body {
 }
 
 .input {
-  margin: 10px;
+  margin: 5px;
   text-align: center;
+}
+
+.selector {
+  margin: 5px;
+  width: 200px;
 }
 
 .title {
