Log Entry Components + Simple display of Log Entries in Work Details Component

--- a/code/js/front-end/src/app/work-details/work-details.component.html
+++ b/code/js/front-end/src/app/work-details/work-details.component.html
@@ -13,7 +13,7 @@
   </mat-tab>
   <mat-tab label="Equipa">
     <div class="members-container">
-      <mat-card *ngFor="let member of work?.members" class="member-card" (click)="onCardClick(member.id)">
+      <mat-card *ngFor="let member of work?.members" class="member-card" (click)="onMemberClick(member.id)">
         <img mat-card-image src="/assets/profile.png" alt="{{ member.name }}" class="member-profile">
         <mat-card-header>
           <mat-card-title>{{ member.name }}</mat-card-title>
@@ -22,5 +22,24 @@
       </mat-card>
     </div>
   </mat-tab>
-  <mat-tab label="Registos"> Content 3</mat-tab>
+  <mat-tab label="Registos">
+    <div class="log-top-bar">
+      <form>
+        <input type="text" placeholder="Search log by name" #filter>
+        <button class="primary" type="button" (click)="filterResults(filter.value)">Search</button>
+      </form>
+      <button mat-fab color="primary" aria-label="Example icon button with a delete icon" class="log-button" (click)="createNewEntry()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+    <div class="log-container">
+      <mat-list *ngFor="let entry of filteredLogList">
+        <mat-list-item (click)="onLogEntryClick(entry.id)">
+          <div matListItemTitle>{{entry.content}}</div>
+          <div matListItemLine>Posted by {{entry.author.name}} on {{entry.createdAt | date}}</div>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+      </mat-list>
+    </div>
+  </mat-tab>
 </mat-tab-group>
