--- a/code/js/front-end/src/app/work-details/work-details.component.css
+++ b/code/js/front-end/src/app/work-details/work-details.component.css
@@ -19,3 +19,19 @@
   justify-content: center;
   border: 1px solid #000000;
 }
+
+.log-top-bar {
+  display: flex;
+  align-items: center; /* Align items vertically centered */
+  justify-content: space-between; /* Distribute space between items */
+}
+
+form {
+  flex-grow: 1; /* Allows the form to take up all available space */
+}
+
+.log-button {
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-left: auto; /* Pushes the button to the far right */
+}
