Invite Members Implementation started

--- a/code/js/front-end/src/app/work-details/work-details.component.html
+++ b/code/js/front-end/src/app/work-details/work-details.component.html
@@ -21,6 +21,9 @@
         </mat-card-header>
       </mat-card>
     </div>
+    <button *ngIf="admin" mat-fab color="primary" aria-label="Example icon button with a delete icon" class="log-button" (click)="onInviteClick()">
+      <mat-icon>add</mat-icon>
+    </button>
   </mat-tab>
   <mat-tab label="Registos">
     <div class="log-top-bar">
