--- a/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
+++ b/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
@@ -1,1 +1,28 @@
-<p>create-log-entry works! </p>
+<div class="content">
+  <h3>Enter the details of the Log Entry</h3>
+  <form (ngSubmit)="onSubmit()" class="example-form">
+    <mat-form-field>
+      <mat-label>Title of the log entry</mat-label>
+      <input matInput type="text" name="title" [(ngModel)]="logEntry.title">
+    </mat-form-field>
+    <br>
+    <mat-form-field>
+      <mat-label>Leave a comment</mat-label>
+      <textarea matInput [(ngModel)]="logEntry.description" name="description"  required></textarea>
+    </mat-form-field>
+    <br>
+    <button mat-flat-button color="accent" class="button" type="submit">Insert LogEntry</button>
+  </form>
+  <br>
+  <!--<input type="file" (change)="onFileUpload($event)" multiple>
+  <div class="file-container">
+    <mat-list>
+      <mat-list-item *ngFor="let file of uploadedFiles">
+        <div matListItemTitle>File 1</div>
+        <button mat-icon-button matListItemRipple (click)="removeFile(file)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-list-item>
+    </mat-list>
+  </div>-->
+</div>
