--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -9,7 +9,7 @@
     </a>
     <div class="profile">
       <button (click)="drawerProfile.toggle()" class="profile-button">
-        <img src="./assets/profile.png" class="profile-image" alt="profile image">
+        <img src="{{src}}" class="profile-image" alt="profile image" [width]="50" [height]="50">
       </button>
     </div>
   </mat-toolbar>
